--- a/src/app/modules/admin/portfolio/portfolio.component.html
+++ b/src/app/modules/admin/portfolio/portfolio.component.html
@@ -24,13 +24,19 @@
             <div class="flex items-start mt-6 mr-2">
                 <div class="flex flex-col">
                     <div class="font-semibold text-3xl md:text-5xl tracking-tighter">
-                        {{calculateROI()}}%</div>
-                    <div class="font-medium text-sm text-secondary leading-none">{{calculateProfit() | currency:'USD'}}
+                        {{getUnrealizedPercentage()}}%</div>
+                    <div class="font-medium text-sm text-secondary leading-none">{{getUnrealizedAmount() |
+                        currency:'USD'}}
                     </div>
                 </div>
                 <div class="flex flex-col ml-8 md:ml-16">
                     <div class="font-semibold text-3xl md:text-5xl tracking-tighter"><span class="cursor-pointer"
                             (click)="openNewTransactionDialog()">{{portfolioData.amount | currency:'USD'}}</span></div>
+
+                    <div class="font-medium text-sm text-secondary leading-none">Realized: {{calculateROI()}}%
+                        {{calculateProfit()
+                        | currency:'USD'}}
+                    </div>
                     <!-- <div class="font-medium text-sm text-secondary leading-none">Average Monthly Income</div> -->
                 </div>
             </div>
