--- a/src/app/modules/admin/finance/finance.component.html
+++ b/src/app/modules/admin/finance/finance.component.html
@@ -124,7 +124,7 @@
 
         </div>
 
-        <app-strategy class="mt-20"></app-strategy>
+        <app-strategy class="mt-20 w-full"></app-strategy>
 
     </div>
 
