--- a/src/app/modules/admin/trade/list/list.component.html
+++ b/src/app/modules/admin/trade/list/list.component.html
@@ -6,7 +6,8 @@
         </button>
     </div>
     <div class="mr-4 text-lg font-medium tracking-tight leading-6 truncate">Recent trades</div>
-    <div class="text-secondary font-medium">1 pending, 4 completed</div>
+    <div class="text-secondary font-medium">{{calculateTradesByStatus(tradeStatus.open)}} open,
+        {{calculateTradesByStatus(tradeStatus.closed)}} closed</div>
 </div>
 <div class="overflow-x-auto mx-6">
     <table mat-table class="w-full bg-transparent" matSort [dataSource]="tradesDataSource" [trackBy]="trackByFn"
@@ -104,6 +105,18 @@
                                 'bg-green-200 text-green-800 dark:bg-green-600 dark:text-green-50': trade.status === 'completed'}">
                     <span class="leading-relaxed whitespace-nowrap">{{trade.status}}</span>
                 </span>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef style="text-align: right;"> Actions </th>
+            <td mat-cell *matCellDef="let trade">
+                <div style="display: flex;align-items: center;justify-content: flex-end;">
+                    <button mat-flat-button color="primary" style="margin-right: 10px;">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <!-- <button mat-flat-button color="warn"><mat-icon>delete</mat-icon></button> -->
+                </div>
             </td>
         </ng-container>
 
