--- a/src/app/modules/admin/trade/list/list.component.html
+++ b/src/app/modules/admin/trade/list/list.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="overflow-x-auto mx-6">
     <table mat-table class="w-full bg-transparent" matSort [dataSource]="tradesDataSource" [trackBy]="trackByFn"
-        #recentTransactionsTable>
+        #recentTradesTable>
         <!-- Ticker -->
         <ng-container matColumnDef="ticker">
             <th mat-header-cell mat-sort-header *matHeaderCellDef>
@@ -109,10 +109,10 @@
         </ng-container>
 
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef style="text-align: right;"> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let trade">
-                <div style="display: flex;align-items: center;justify-content: flex-end;">
-                    <button mat-flat-button color="primary" style="margin-right: 10px;">
+                <div class="flex justify-content">
+                    <button mat-flat-button color="none" (click)="openTradeDialog(trade)">
                         <mat-icon>edit</mat-icon>
                     </button>
                     <!-- <button mat-flat-button color="warn"><mat-icon>delete</mat-icon></button> -->
