--- a/src/app/modules/admin/strategy/strategy.component.html
+++ b/src/app/modules/admin/strategy/strategy.component.html
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="flex flex-col flex-auto w-full items-center mt-6">
-                        <button class="px-6" mat-flat-button [color]="'primary'">
+                        <button class="px-6" mat-flat-button [color]="'primary'" (click)="openStrategyDialog(strategy)">
                             Update Strategy
                         </button>
                     </div>
